# growth-data-functions

./: CHANGELOG.md  CONTRIBUTING.md  Originations.SQL  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/growth_data_functions/: __init__.py  draft_origination_data.py  generate_originations_data.py  test_draft_origination.py
src/growth_data_functions/data_aquisition/: draft.py  get_address_data.py  get_application_data.py  get_borrower_settings_query.py  get_borrowers_data.py  get_contracts_data.py  get_financing_options_data.py  get_groups_data.py  get_limits_data.py  get_origination_data.py  get_origination_summaries_data.py  get_proposals_data.py  get_renegotiations_data.py  get_retailer_categories.py  get_retailers_data.py  get_rfm_clients_data.py  get_rfm_data.py  get_run_googleapis_com_stdout_data.py  get_stores_data.py  get_user_group_data.py  get_user_pix.py  get_vw_installments_with_taken_limit_data.py
src/growth_data_functions/queries/: build_origination_query.py  build_pix_query.py
src/growth_data_functions/queries/clients_info_queries/: build_application_query.py  build_borrowers_query.py
src/growth_data_functions/queries/new_queries/: build_address_query.py  build_borrower_settings_query.py  build_contracts_query.py  build_financing_options_query.py  build_groups_query.py  build_limits_query.py  build_origination_summaries_query.py  build_proposals_query.py  build_renegotiations_query.py  build_retailer_categories_query.py  build_retailers_query.py  build_rfm_clients_query.py  (+5 more)
tests/: test_growth_data_functions.py
