[tool.poetry]
name = "growth_data_functions"
version = "0.1.0"
description = "Useful python functions for Growth Teams's analysis"
authors = ["Gabriella Maia"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
