[tool.poetry]
name = "growth_data_functions"
version = "0.1.0"
description = "Useful python functions for Growth Teams's analysis"
authors = ["Gabriella Maia"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
db-dtypes = "^1.1.1"
google-cloud = "^0.34.0"
google-cloud-bigquery = "^3.11.4"
google-cloud-bigquery-storage = "^2.22.0"
numpy = "^1.20.0"
pandas = "^2.0.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
